# llm-cli

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  config.toml
docs/: FEATURES.md
src/: config.rs  formatter.rs  lib.rs  main.rs
src/cli/: args.rs  run.rs
src/core/: config.rs  conversation.rs  error.rs  mod.rs
src/core/formatter/: codeblock_detector.rs  mod.rs  syntax_highlighter.rs
src/eventsource/: mod.rs
src/providers/: claude.rs  llm.rs  mod.rs  openai.rs
src/providers/claude/: client.rs  mod.rs
src/providers/claude/types/: message.rs  mod.rs  request.rs  stream.rs
src/providers/openai/: client.rs  mod.rs
src/providers/openai/types/: chat_completion_chunk.rs  chat_completion_object.rs  chat_completion_request.rs  message.rs  mod.rs  shared.rs
src/providers/types/: message_chunk.rs  messages.rs  mod.rs
src/tools/: command_history.rs  execute_command.rs  mod.rs  registry.rs  types.rs
tests/providers/: claude_test.rs  mod.rs  openai_test.rs
