[package]
name = "llm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
dotenv = "0.15"
async-trait = "0.1"
toml = "0.8"
syntect = "5.1"
regex = "1.10"
termcolor = "1.4"
