[package]
name = "llm-cli"
description = "A CLI for using llms on the command line."
repository = "TBD"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"
keywords = ["llm", "cli", "command-line", "tool"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3"
async-trait = "0.1.86"
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
config = "0.15.8"
dotenv = "0.15"
eventsource-stream = "0.2"
futures = "0.3"
futures-util = "0.3"
log = "0.4.25"
env_logger = "0.11.6"
regex = "1"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
syntect = "5"
termcolor = "1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
toml = "0.8.20"
derivative = "2"

[dev-dependencies]
strip-ansi-escapes = "0.2.1"
once_cell = "1.20.3"
tempfile = "3.2.0"

[profile.dev]
debug = 2
opt-level = 0

[profile.release]
debug = 0
opt-level = 3
codegen-units = 1
lto = "fat"

[profile]
